# the-pause-dashboard

./: .env.example  main.py  pyproject.toml
db/: __init__.py  client.py  llm.py
templates/: dashboard.html
